--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
 .App {
-  text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, 0);
+    display: flex;
+    align-items: start;
+    column-gap: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.row {
+    display: flex;
+    flex-direction: row;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.headerWrapper {
+    display: flex;
+    width: 100%;
+    column-gap: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.wrapperButtonsWithSelect {
+    display: flex;
+    column-gap: 10px;
+    flex-direction: column;
+    width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.boxStyles {
+    width: 100%;
+    min-width: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selectStyles {
+    height: 30px;
+}
+
+.inputLabel {
+    top: -10px !important;
+}
+
+.buttonStyle {
+    height: 30px;
 }
